[package]
name = "bevy_game_jam_5"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = { version = "0.1.1", features = ["debug-plugin"] }
kd-tree = "0.6.0"
# bevy = "0.14"

[dependencies.bevy]
version = "0.14"
features = []
